--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,115 @@
 /* Your styles here */
+/* HEADER */
+
+header {
+  width: 50%;
+  margin: 0 auto;
+}
+
+.images {
+  width: 100%;
+}
+
+.logo {
+  background-image: url(../images/banner.jpg);
+  text-align: center;
+}
+
+header h1 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 32px;
+  color: #25a2c3;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  font-weight: bold;
+}
+
+div p {
+  text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  letter-spacing: 1.65px;
+  padding-bottom: 20px;
+}
+
+button {
+  background-color: #f04c2f;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, bold;
+  color: white;
+  padding: 8px 16px;
+  border-radius: 6px;
+  border: none;
+  margin-bottom: 20px;
+}
+
+/* MAIN */
+
+main {
+  width: 50%;
+  margin: 0 auto;
+}
+
+main h3 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 25px;
+  color: #25a2c3;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+main p {
+  text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  letter-spacing: 1.65px;
+}
+
+main p:nth-of-type(2) {
+  padding-bottom: 30px;
+}
+
+.notebook {
+  text-align: center;
+  width: auto;
+  border-radius: 200px;
+}
+
+.spot {
+  margin-top: 40px;
+  margin-bottom: 30px;
+  background-color: #f04c2f;
+  color: white;
+  text-align: center;
+}
+
+.spot h1 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding-top: 40px;
+  padding-bottom: 30px;
+  font-size: 2em;
+  font-weight: bold;
+}
+
+.spot p {
+  font-style: italic;
+  padding-bottom: 40px;
+}
+
+.spot h4 {
+  font-size: 25px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin-bottom: 5px;
+}
+
+/* FOOTER */
+
+footer {
+  width: 50%;
+  margin: 0 auto;
+}
