--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,15 @@ header {
   margin: 0 auto;
 }
 
-.images {
+img {
   width: 100%;
 }
 
 .logo {
   background-image: url(../images/banner.jpg);
   text-align: center;
+  background-position: center;
+  background-size: cover;
 }
 
 header h1 {
@@ -36,7 +38,8 @@ div p {
 button {
   background-color: #f04c2f;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, bold;
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: bold;
   color: white;
   padding: 8px 16px;
   border-radius: 6px;
@@ -73,8 +76,9 @@ main p:nth-of-type(2) {
 }
 
 .notebook {
-  text-align: center;
-  width: auto;
+  display: block;
+  margin: 0 auto;
+  width: 250px;
   border-radius: 200px;
 }
 
@@ -155,9 +159,33 @@ main p:nth-of-type(2) {
   border-right: 1px solid grey;
 }
 
+.card3 {
+  margin-bottom: 70px;
+}
+
 /* FOOTER */
 
 footer {
   width: 50%;
   margin: 0 auto;
+  background-color: #25a2c3;
+  text-align: center;
+  color: white;
+  padding: 40px 40px 50px;
+}
+
+footer h1 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: bold;
+  font-size: 2em;
+  padding-bottom: 30px;
+}
+
+footer p:nth-of-type(3) {
+  margin-bottom: 25px;
+}
+
+footer p:nth-of-type(4) {
+  margin-top: 25px;
 }
